# server/internal/docs/swagger.json
@@ -13,7 +13,7 @@
     "basePath": "/api",
     "paths": {
         "/auth/login": {
-            "get": {
+            "post": {
                 "description": "Login",
                 "produces": [
                     "application/json"
@@ -43,7 +43,7 @@
             }
         },
         "/auth/signup": {
-            "get": {
+            "post": {
                 "description": "Signup",
                 "produces": [
                     "application/json"
@@ -55,11 +55,13 @@
                 "operationId": "signup",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "username",
                         "name": "username",
-                        "in": "query",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
@@ -97,14 +99,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "complexity",
-                        "name": "complexity",
+                        "description": "importance",
+                        "name": "importance",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "priority",
-                        "name": "priority",
+                        "description": "urgency",
+                        "name": "urgency",
                         "in": "query"
                     },
                     {
@@ -115,8 +117,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "order field (e.g. deadline, estimated, complexity)",
-                        "name": "order_by",
+                        "description": "order field (e.g. deadline, estimated, importance)",
+                        "name": "orderBy",
                         "in": "query"
                     }
                 ],
@@ -151,7 +153,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Task"
+                            "$ref": "#/definitions/domain.CreateTaskAnswer"
                         }
                     }
                 }
@@ -263,17 +265,94 @@
                     }
                 }
             }
+        },
+        "/task/{task_id}/question": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Answer question to make F more precise",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Answer question",
+                "operationId": "answer_task_question",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "task id",
+                        "name": "task_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "answer question object",
+                        "name": "answer",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.AnswerQuestionDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Question"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "domain.AnswerQuestionDTO": {
+            "type": "object",
+            "properties": {
+                "response": {
+                    "type": "integer"
+                },
+                "task_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "domain.CreateTaskAnswer": {
+            "type": "object",
+            "properties": {
+                "question": {
+                    "$ref": "#/definitions/domain.Question"
+                },
+                "task": {
+                    "$ref": "#/definitions/domain.Task"
+                }
+            }
+        },
+        "domain.Question": {
+            "type": "object",
+            "properties": {
+                "compare_task_id": {
+                    "type": "integer"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.Task": {
             "type": "object",
             "properties": {
-                "complexity": {
-                    "type": "integer"
-                },
-                "created_at": {
+                "createdAt": {
                     "type": "string"
+                },
+                "custom_mult": {
+                    "type": "number"
                 },
                 "deadline": {
                     "type": "string"
@@ -283,6 +362,9 @@
                 },
                 "estimated": {
                     "type": "integer"
+                },
+                "hi": {
+                    "type": "number"
                 },
                 "icon": {
                     "type": "integer"
@@ -290,22 +372,23 @@
                 "id": {
                     "type": "integer"
                 },
-                "priority": {
+                "importance": {
                     "type": "integer"
+                },
+                "lo": {
+                    "type": "number"
                 },
                 "title": {
                     "type": "string"
+                },
+                "urgency": {
+                    "type": "integer"
                 }
             }
         },
         "domain.TaskPutDTO": {
             "type": "object",
             "properties": {
-                "complexity": {
-                    "type": "integer",
-                    "maximum": 10,
-                    "minimum": 0
-                },
                 "deadline": {
                     "type": "string"
                 },
@@ -318,13 +401,18 @@
                 "icon": {
                     "type": "integer"
                 },
-                "priority": {
+                "importance": {
                     "type": "integer",
                     "maximum": 10,
                     "minimum": 0
                 },
                 "title": {
                     "type": "string"
+                },
+                "urgency": {
+                    "type": "integer",
+                    "maximum": 10,
+                    "minimum": 0
                 }
             }
         }
@@ -332,7 +420,7 @@
     "securityDefinitions": {
         "ApiKeyAuth": {
             "type": "apiKey",
-            "name": "Token",
+            "name": "Authorization",
             "in": "header"
         }
     },
